--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       <th class ="index">Mars</th>
       <th class ="index">Venus</th>
     </tr>
+    <tr>
+      <th class ="row"> Mass </th>
+      <th class ="row"> 1.90 X 10<sup>27</sup></th>
+      <th class ="row"> 5.69 X 10<sup>26</sup></th>
+      <th class ="row"> 6.42 X 10<sup>23</sup></th>
+      <th class ="row"> 4.87 X 10<sup>24</sup></th>
+    </tr>
   </table>
 </body>
 </html>
