added information on the planets

--- a/index.html
+++ b/index.html
@@ -10,23 +10,67 @@
   <h3> The Planets </h3>
   <table>
     <tr>
+      <td>Planet</td>
       <td class ="planet"><img src="pictures/jupiter.jpg" alt="jupiter"></td>
       <td class ="planet"><img src="pictures/saturn.jpg" alt="saturn"></td>
       <td class ="planet"><img src="pictures/mars.jpg" alt="mars"></td>
       <td class ="planet"><img src="pictures/venus.jpg" alt="venus"></td>
     </tr>
     <tr>
+      <td> </td>
       <th class ="index">Jupiter</th>
       <th class ="index">Saturn</th>
       <th class ="index">Mars</th>
       <th class ="index">Venus</th>
     </tr>
     <tr>
-      <th class ="row"> Mass </th>
+      <th class ="row"> Mass (kg) </th>
       <th class ="row"> 1.90 X 10<sup>27</sup></th>
       <th class ="row"> 5.69 X 10<sup>26</sup></th>
       <th class ="row"> 6.42 X 10<sup>23</sup></th>
       <th class ="row"> 4.87 X 10<sup>24</sup></th>
+    </tr>
+    <tr>
+      <th class ="row"> Diameter (km) </th>
+      <th class ="row"> 142,800</th>
+      <th class ="row"> 120,660</th>
+      <th class ="row"> 6,787</th>
+      <th class ="row"> 12,104</th>
+    </tr>
+     <tr>
+      <th class ="row"> Mean Density(kg/m<sup>3</sup>) </th>
+      <th class ="row"> 1,314 </th>
+      <th class ="row"> 6,90</th>
+      <th class ="row"> 3,940</th>
+      <th class ="row"> 5,250</th>
+    </tr>
+     <tr>
+      <th class ="row"> Escape Velocity(m/s) </th>
+      <th class ="row"> 59,500 </th>
+      <th class ="row"> 35,600</th>
+      <th class ="row"> 5,000</th>
+      <th class ="row"> 10,400</th>
+    </tr>
+    <tr>
+      <th class ="row"> Avg. Distance from the Sun (AU)</th>
+      <th class ="row"> 5.203</th>
+      <th class ="row"> 9.537</th>
+      <th class ="row"> 1.524</th>
+      <th class ="row"> 0.723</th>
+    </tr>
+    <tr>
+      <th class ="row"> Rotation Period</th>
+      <th class ="row"> 0.41</th>
+      <th class ="row"> 0.44</th>
+      <th class ="row"> 1.026</th>
+      <th class ="row"> 243.02</th>
+    </tr>
+    <tr>
+      <th class ="row"> Revolution Period</th>
+      <th class ="row"> 11.86</th>
+      <th class ="row"> 29.46</th>
+      <th class ="row"> 686.98</th>
+      <th class ="row"> 224.7</th>
     </tr>
   </table>
 </body>
