--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Audiowide|Orbitron|VT323" rel="stylesheet">
 </head>
 <body>
-  <h1> Let's Launch Into the <b> Solar System </b></h1>
+  <h1> Let's Launch Into the Solar System</h1>
   <h3> The Planets </h3>
   <table>
     <tr>
