--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <td class ="planet"><img src="pictures/venus.jpg" alt="venus"></td>
     </tr>
     <tr>
-      <td> Planet</td>
+      <th> Planet</th>
       <th class ="index">Jupiter</th>
       <th class ="index">Saturn</th>
       <th class ="index">Mars</th>
