--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     </tr>
     <tr>
       <th> Planet</th>
-      <th class ="index">Jupiter</th>
-      <th class ="index">Saturn</th>
-      <th class ="index">Mars</th>
-      <th class ="index">Venus</th>
+      <td class ="index">Jupiter</th>
+      <td class ="index">Saturn</td>
+      <td class ="index">Mars</td>
+      <td class ="index">Venus</td>
     </tr>
     <tr>
       <th class ="row"> Mass (kg) </th>
-      <th class ="row"> 1.90 X 10<sup>27</sup></th>
-      <th class ="row"> 5.69 X 10<sup>26</sup></th>
-      <th class ="row"> 6.42 X 10<sup>23</sup></th>
-      <th class ="row"> 4.87 X 10<sup>24</sup></th>
+      <td class ="row"> 1.90 X 10<sup>27</sup></td>
+      <td class ="row"> 5.69 X 10<sup>26</sup></td>
+      <td class ="row"> 6.42 X 10<sup>23</sup></td>
+      <td class ="row"> 4.87 X 10<sup>24</sup></td>
     </tr>
     <tr>
       <th class ="row"> Diameter (km) </th>
