--- a/index.html
+++ b/index.html
@@ -32,45 +32,45 @@
     </tr>
     <tr>
       <th class ="row"> Diameter (km) </th>
-      <th class ="row"> 142,800</th>
-      <th class ="row"> 120,660</th>
-      <th class ="row"> 6,787</th>
-      <th class ="row"> 12,104</th>
+      <td class ="row"> 142,800</td>
+      <td class ="row"> 120,660</td>
+      <td class ="row"> 6,787</td>
+      <td class ="row"> 12,104</td>
     </tr>
      <tr>
       <th class ="row"> Mean Density(kg/m<sup>3</sup>) </th>
-      <th class ="row"> 1,314 </th>
-      <th class ="row"> 6,90</th>
-      <th class ="row"> 3,940</th>
-      <th class ="row"> 5,250</th>
+      <td class ="row"> 1,314 </td>
+      <td class ="row"> 6,90</td>
+      <td class ="row"> 3,940</td>
+      <td class ="row"> 5,250</td>
     </tr>
      <tr>
       <th class ="row"> Escape Velocity(m/s) </th>
-      <th class ="row"> 59,500 </th>
-      <th class ="row"> 35,600</th>
-      <th class ="row"> 5,000</th>
-      <th class ="row"> 10,400</th>
+      <td class ="row"> 59,500 </td>
+      <td class ="row"> 35,600</td>
+      <td class ="row"> 5,000</td>
+      <td class ="row"> 10,400</td>
     </tr>
     <tr>
       <th class ="row"> Avg. Distance from the Sun (AU)</th>
-      <th class ="row"> 5.203</th>
-      <th class ="row"> 9.537</th>
-      <th class ="row"> 1.524</th>
-      <th class ="row"> 0.723</th>
+      <td class ="row"> 5.203</td>
+      <td class ="row"> 9.537</td>
+      <td class ="row"> 1.524</td>
+      <td class ="row"> 0.723</td>
     </tr>
     <tr>
       <th class ="row"> Rotation Period</th>
-      <th class ="row"> 0.41</th>
-      <th class ="row"> 0.44</th>
-      <th class ="row"> 1.026</th>
-      <th class ="row"> 243.02</th>
+      <td class ="row"> 0.41</td>
+      <td class ="row"> 0.44</td>
+      <td class ="row"> 1.026</td>
+      <td class ="row"> 243.02</td>
     </tr>
     <tr>
       <th class ="row"> Revolution Period</th>
-      <th class ="row"> 11.86</th>
-      <th class ="row"> 29.46</th>
-      <th class ="row"> 686.98</th>
-      <th class ="row"> 224.7</th>
+      <td class ="row"> 11.86</td>
+      <td class ="row"> 29.46</td>
+      <td class ="row"> 686.98</td>
+      <td class ="row"> 224.7</td>
     </tr>
   </table>
 </body>
