--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <h3> The Planets </h3>
   <table>
     <tr>
-      <td></td>
-      <td class ="planet"><img src="pictures/jupiter.jpg" alt="jupiter"></td>
-      <td class ="planet"><img src="pictures/saturn.jpg" alt="saturn"></td>
-      <td class ="planet"><img src="pictures/mars.jpg" alt="mars"></td>
-      <td class ="planet"><img src="pictures/venus.jpg" alt="venus"></td>
+      <td><img src="pictures/jupiter.jpg" alt="jupiter" width="300"></td>
+      <td><img src="pictures/saturn.jpg" alt="saturn" width="300"></td>
+      <td><img src="pictures/mars.jpg" alt="mars" width="300"></td>
+      <td><img src="pictures/venus.jpg" alt="venus" width="300"></td>
     </tr>
     <tr>
       <th> Planet</th>
