--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title> Inciya Jafri: Lab 5 </title>
   <link href="https://fonts.googleapis.com/css?family=Audiowide|Orbitron|VT323" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
   <h1> Let's Launch Into the Solar System</h1>
