--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <th> Planet</th>
-      <td class ="index">Jupiter</th>
+      <td class ="index">Jupiter</td>
       <td class ="index">Saturn</td>
       <td class ="index">Mars</td>
       <td class ="index">Venus</td>
